--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -217,11 +217,11 @@
 .section-row {
   position: relative;
 }
-.section-row .section-title__en {
+.section-row .section-subtitle1 {
   font-size: 0.6875rem;
   color: #d39c38;
 }
-.section-row .section-title__jp {
+.section-row .section-subtitle2 {
   font-size: 1.5rem;
 }
 .section-row__image-title {
@@ -233,7 +233,7 @@
     padding-left: 30px;
     padding-right: 30px;
   }
-  .section-row .section-title__jp {
+  .section-row .section-subtitle2 {
     font-size: 1.2rem;
   }
 }
@@ -547,7 +547,7 @@
   background: url(../img/about/section04/pic--01.jpg) bottom center/auto 775px
     no-repeat;
 }
-.about-section04 .section-title__jp {
+.about-section04 .section-subtitle2 {
   text-align: center;
 }
 .about-section04__inner {
@@ -591,7 +591,7 @@
 .page-shopping__list .list-img img {
   width: 350px;
 }
-.page-shopping .section-title__jp {
+.page-shopping .section-subtitle2 {
   font-size: 1.5rem;
   margin-top: 30px;
 }
@@ -611,7 +611,7 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 80px;
   }
-  .page-shopping .section-title__jp {
+  .page-shopping .section-subtitle2 {
     font-size: 1.2rem;
     margin-top: 30px;
   }
