--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -654,6 +654,8 @@ header {
   white-space: nowrap;
   padding: 16px;
   cursor: pointer;
+  font-size: 1.3rem;
+  font-weight: 600;
 }
 
 .menu-list > ul > li > a > img {
