--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -67,6 +67,60 @@
   height: 100vh;
   min-height: 500px;
 }
+.top-main-slideshow {
+  position: relative;
+  list-style: none;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  min-height: 500px;
+}
+
+.top-main-slideshow li span {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: transparent;
+  opacity: 0;
+  z-index: 0;
+  animation: imageAnimation 18s linear infinite 0s;
+}
+
+.top-main-slideshow li span img {
+  border-radius: unset;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 425px) {
+  .top-main-slideshow li span img {
+    border-radius: 10%;
+    width: 100%;
+    height: 340px;
+    object-fit: cover;
+  }
+}
+
+.top-main-slideshow li:nth-child(1) span {
+  color: #fff;
+}
+
+.top-main-slideshow li:nth-child(2) span {
+  -webkit-animation-delay: 6s;
+  -moz-animation-delay: 6s;
+  animation-delay: 6s;
+  color: #fff;
+}
+
+.top-main-slideshow li:nth-child(3) span {
+  -webkit-animation-delay: 12s;
+  -moz-animation-delay: 12s;
+  animation-delay: 12s;
+  color: #fff;
+}
 
 @media screen and (max-width: 768px) {
   .top-menu {
@@ -123,19 +177,21 @@
   padding: 40px 0 60px;
 }
 
-.top-message__title {
-  position: absolute;
-  width: 72px;
-  height: 166px;
-  background: url(../img/index/message/tit--01.png) center/contain no-repeat;
-  text-indent: -9999px;
-  top: 112px;
-  right: calc(50vw - 419px);
-  z-index: 2;
-}
 .top-message .section-title {
   margin-left: auto;
   margin-right: auto;
+}
+
+.top-message .gridthree-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+.gridthree-row img {
+  width: 400px;
+  border-radius: 40%;
 }
 
 @media screen and (max-width: 768px) {
@@ -144,11 +200,6 @@
   }
   .top-message .section-title {
     margin-bottom: 50px;
-  }
-  .top-message__title {
-    right: 45px;
-    width: 53px;
-    height: 122px;
   }
 }
 
@@ -276,6 +327,11 @@
   text-align: left;
 }
 
+.top-about-content .gridhalf-col img {
+  border-radius: 10%;
+  width: 100%;
+}
+
 @media screen and (max-width: 768px) {
   .top-about {
     -webkit-box-sizing: border-box;
@@ -289,6 +345,9 @@
     padding-right: 30px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+  }
+  .top-about-content .gridhalf-row {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
 
@@ -402,3 +461,8 @@
   }
 }
 /* main end */
+
+.swiper {
+  width: 600px;
+  height: 300px;
+}
