--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -1,57 +1,3 @@
-/* reset start */
-.row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
-@media screen and (max-width: 768px) {
-  .row {
-    display: block;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    text-align: center;
-    width: 100%;
-  }
-}
-
-.row-reverse {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: center;
-  text-align: end;
-  margin: auto;
-}
-
-@media screen and (max-width: 768px) {
-  .row-reverse {
-    display: block;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    text-align: center;
-    width: 100%;
-  }
-}
-
-.col {
-  position: relative;
-  width: 100%;
-  min-height: 1px;
-  padding-right: 0px;
-  padding-left: 0px;
-}
-@media screen and (max-width: 768px) {
-  .col {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-}
-
-/* reset end */
-
 /* main start */
 .top-main-wrapper {
   position: relative;
@@ -60,19 +6,12 @@
   background-color: var(--bg-primary);
 }
 
-.top-main {
-  z-index: 1;
-  position: relative;
-  background: url(../img/index/main/pic--01.jpg) center/cover no-repeat;
-  height: 100vh;
-  min-height: 500px;
-}
 .top-main-slideshow {
   position: relative;
   list-style: none;
   z-index: 1;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   min-height: 500px;
 }
 
@@ -96,10 +35,11 @@
 }
 
 @media screen and (max-width: 425px) {
+  .top-main-wrapper {
+    height: 80vh;
+  }
   .top-main-slideshow li span img {
-    border-radius: 10%;
     width: 100%;
-    height: 340px;
     object-fit: cover;
   }
 }
@@ -182,14 +122,15 @@
   margin-right: auto;
 }
 
-.top-message .gridthree-row {
+.top-msg-row {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
   padding-bottom: 40px;
 }
 
-.gridthree-row img {
+.top-msg-row img {
   width: 400px;
   border-radius: 40%;
 }
@@ -200,6 +141,15 @@
   }
   .top-message .section-title {
     margin-bottom: 50px;
+  }
+  .top-msg-row {
+    display: block;
+  }
+  .top-msg-col:not(:first-child) {
+    display: none;
+  }
+  .top-msg-row img {
+    width: 60vw;
   }
 }
 
@@ -360,22 +310,35 @@
 }
 
 .top-shop-list {
-  display: -ms-grid;
-  align-items: center;
   display: grid;
-  -ms-grid-columns: 1fr 2px 1fr 2px 1fr 2px 1fr;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2px;
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 2%;
+  align-items: center;
+  justify-content: space-between;
 }
 .top-shop-list img {
   width: 90%;
+  margin: auto;
 }
 
 @media screen and (max-width: 768px) {
   .top-shop-list {
-    -ms-grid-columns: 1fr 5px 1fr;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 5%;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .top-shop-list {
+    grid-template-rows: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 3%;
+  }
+  .top-shop-list img {
+    width: 80%;
+    margin: auto;
   }
 }
 
@@ -461,8 +424,3 @@
   }
 }
 /* main end */
-
-.swiper {
-  width: 600px;
-  height: 300px;
-}
